Hicimos retoques generales en el codigo para adecuarlo al diagrama de clases